[package]
name = "pi_slot"
version = "0.1.7"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "lock free Slotmap data structure"
repository = "https://github.com/GaiaWorld/pi_slot.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "slotmap", "lock_free"]
readme = "README.md"
categories = ["data-structures", "memory-management", "caching"]


[dependencies]
pi_null = "0.1"
pi_arr = "0.17"
pi_append_vec = "0.3"
pi_share = "0.4"
pi_key_alloter = "0.4"