[package]
name = "pi_slot"
version = "0.4.0"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "lock free Slotmap data structure"
repository = "https://github.com/GaiaWorld/pi_slot.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "slotmap", "lock_free"]
readme = "README.md"
categories = ["data-structures", "memory-management", "caching"]


[dependencies]
pi_null = "0.1"
pi_arr = "0.19"
pi_share = "0.5"
pi_key_alloter = "0.6"